# AutoVideoCraft

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.example.json  generate_video.py  pyproject.toml  requirements.txt  split_video.py  start.bat  start.sh
.github/workflows/: ci.yml
src/autovideocraft/: __init__.py  __main__.py  app.py  config.py  init_env.py  pipeline.py  utils.py
src/autovideocraft/engines/: llm_engine.py  media_engine.py  tts_engine.py  video_engine.py
tests/: run_basic_tests.py  test_config.py  test_tts_engine.py
