[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "autovideocraft"
version = "1.0.0"
description = "Automated short video generation tool powered by AI - just configure your LLM API and go"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
keywords = ["ai", "video", "automation", "tts", "llm", "gradio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "gradio>=4.20.0",
    "openai>=1.10.0",
    "edge-tts>=6.1.9",
    "moviepy>=1.0.3",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.9",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "Pillow>=10.0.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/jsoner-desiner/AutoVideoCraft"
Repository = "https://github.com/jsoner-desiner/AutoVideoCraft"
Issues = "https://github.com/jsoner-desiner/AutoVideoCraft/issues"

[project.scripts]
autovideocraft = "autovideocraft.app:main"

[tool.setuptools.packages.find]
where = ["src"]
